added unit test framework

--- a/3-book-order/Makefile
+++ b/3-book-order/Makefile
@@ -6,4 +6,4 @@ clean:
 	make -C ../2.1-logging/ clean
 	rm *.o test
 
-test: test.o book_order.o ../2.1-logging/log.o
+test: test.o book_order.o ../2.1-logging/log.o ../2.1-logging/unit.o
