added MarkDown generation to logging, unit-tests, strings

--- a/2.3-strings/Makefile
+++ b/2.3-strings/Makefile
@@ -5,6 +5,9 @@ all: only
 only: test
 	./test
 
+doc:
+	../4-build-markdown/build_markdown
+
 clean:
 	make -C ../2.2-unit-tests/ clean
 	rm *.o test
