--- a/3-build-markdown/Makefile
+++ b/3-build-markdown/Makefile
@@ -1,7 +1,7 @@
 all: only
 	make -C ../2.1-logging/	only
 	make -C ../2.3-strings/ only
-	make -C ../2.5-string-list/ only
+	make -C ../2.4-string-list/ only
 
 only: build_markdown
 	./build_markdown
@@ -9,7 +9,7 @@ only: build_markdown
 clean:
 	make -C ../2.1-logging/ clean
 	make -C ../2.3-strings/ clean
-	make -C ../2.5-string-list/ clean
+	make -C ../2.4-string-list/ clean
 	rm *.o build_markdown
 
-build_markdown: build_markdown.o ../2.1-logging/log.o ../2.3-strings/str.o ../2.5-string-list/str_lst.o
+build_markdown: build_markdown.o ../2.4-string-list/str_lst.o ../2.3-strings/str.o ../2.1-logging/log.o
