move build_markdown to bin directory

--- a/2.5-t-log-adapter/Makefile
+++ b/2.5-t-log-adapter/Makefile
@@ -8,7 +8,7 @@ only: test
 	./test
 
 doc:
-	../3-build-markdown/build_markdown
+	../bin/build_markdown
 	
 clean:
 	make -C ../2.4-string-list/ clean
