--- a/2.3-strings/Makefile
+++ b/2.3-strings/Makefile
@@ -6,7 +6,7 @@ only: test
 	./test
 
 doc:
-	../3-build-markdown/build_markdown
+	../bin/build_markdown
 
 clean:
 	make -C ../2.2-unit-tests/ clean
