--- a/3-build-markdown/Makefile
+++ b/3-build-markdown/Makefile
@@ -10,9 +10,10 @@ clean:
 	make -C ../2.1-logging/ clean
 	make -C ../2.3-strings/ clean
 	make -C ../2.4-string-list/ clean
-	rm *.o ../bin/build_markdown
+	rm *.o build_markdown ../bin/build_markdown
 
 ../bin/build_markdown: build_markdown
-	mv build_markdown ../bin/build_markdown
+	mkdir -p ../bin
+	cp build_markdown ../bin/build_markdown
 
 build_markdown: build_markdown.o ../2.4-string-list/str_lst.o ../2.3-strings/str.o ../2.1-logging/log.o
